# DL_CNM_23

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: catboost.joblib  lgbm.joblib  mlp.joblib  uni_catboost_v0.joblib
notebooks/: 1.0-EDA.ipynb  1.0-mg-EDA.ipynb  2.0-Data-clusterization.ipynb  2.0-pk-random-forest.ipynb  2.1-RNN_preprocessing.ipynb  2.1-Stop-words.ipynb  2.1-pk-boosting-models.ipynb  2.2-neural-network.ipynb  3.0-mg-LSTM-train.ipynb  3.0-mg-LSTM.ipynb  3.1-mg-LSTM-validation.ipynb  boosting_models.ipynb  feature_extraction.ipynb  neural_network.ipynb  text_unification.ipynb
src/data/: lstm_dataloader.py  nn_preprocessing.py  rnn_preprocessing.py  split_dataset.py
src/features/: build_boosting_features.py  build_catboost_features.py
src/models/: boosting_inference.py  catboost_inference.py  lstm.py  model_classes.py  test.json  train_boosting.py  train_catboost.py
src/utils/: feature_extraction.py  text_preparation.py
