[tool.poetry]
name = "dl-cnm-23"
version = "0.1.0"
description = ""
authors = ["Mikhail Gurevich <gurevich3004@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
jupyterlab = "^3.4.8"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
