[tool.poetry]
name = "dl-cnm-23"
version = "0.1.0"
description = ""
authors = ["Mikhail Gurevich <gurevich3004@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
jupyterlab = "^3.4.8"
tqdm = "^4.64.1"
transliterate = "^1.10.2"
scikit-learn = "^1.1.2"
torch = {url = "https://download.pytorch.org/whl/cu116/torch-1.12.0%2Bcu116-cp310-cp310-linux_x86_64.whl"}
ipywidgets = "^8.0.2"
pytorch-metric-learning = "^1.6.2"
matplotlib = "^3.6.1"
wandb = "^0.13.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
